kubernetes/homeassistant/base/postgres/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homeassistant-app
  namespace: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: homeassistant
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
          podSelector:
            matchLabels:
              app: homeassistant
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homeassistant-postgres
  namespace: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: homeassistant
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: homeassistant
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: homeassistant
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-truenas-egress
  namespace: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: homeassistant
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.6/32
    - to:
        - ipBlock:
            cidr: 10.101.1.7/32
    - to:
        - ipBlock:
            cidr: 10.101.10.7/32
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgdump-ingress
  namespace: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: homeassistant
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-ingress
  namespace: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: homeassistant
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/pgadmin: pgadmin
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-ingress-psql
  namespace: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: homeassistant
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443  # Passthrough/ReEncrypt Termination
        - protocol: TCP
          port: 80  # Edge Termination
